--- a/data/tables/XScreen/tables_obscured_areas.json
+++ b/data/tables/XScreen/tables_obscured_areas.json
@@ -27,5 +27,14 @@
       "name": "Tables; Obscured Areas",
       "source": "XScreen"
     }
+  ],
+  "top_category": "DM Tools",
+  "sub_category": "Game Mechanics",
+  "tags": [
+    "Obscured Areas",
+    "Light Conditions",
+    "Visibility",
+    "Effects",
+    "Environment"
   ]
 }
