--- a/data/tables/XPHB/describe_appearance_and_personality_dexterity.json
+++ b/data/tables/XPHB/describe_appearance_and_personality_dexterity.json
@@ -46,5 +46,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Resources",
+  "sub_category": "Appearance",
+  "tags": [
+    "Dexterity",
+    "Appearance",
+    "Personality",
+    "Character Traits",
+    "Ability Scores"
   ]
 }
