--- a/data/tables/XPHB/describe_appearance_and_personality_strength.json
+++ b/data/tables/XPHB/describe_appearance_and_personality_strength.json
@@ -46,5 +46,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Resources",
+  "sub_category": "Appearance",
+  "tags": [
+    "Strength",
+    "Appearance",
+    "Personality",
+    "Character Traits",
+    "Role-playing"
   ]
 }
